--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   background-image: url('https://i.imgur.com/FUhnFdh.png');
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size:cover;
   background-blend-mode: difference;
   min-height: 100vh;
   display: flex;
@@ -37,7 +37,12 @@ button{
   cursor: pointer;
   border: none;
   box-shadow: 0 0 3px black;
+  border-radius: 5%;
 }
 button:active{
   transform: scale(0.98);
+}
+
+input{
+  padding: 0.7em;
 }
